--- a/admin/view/template/extension/shipping/omnivalt.twig
+++ b/admin/view/template/extension/shipping/omnivalt.twig
@@ -278,22 +278,20 @@
                     </div>
           </div>
           <div class="form-group">
-                    <label class="col-sm-2 control-label" for="terminals"><?=$cron_url;?></label>
+                    <label class="col-sm-2 control-label" for="terminals">{{ cron_url }}</label>
                     <div class="col-sm-10" id="terminals">
                     <a href="{{ HTTPS_CATALOG }}index.php?route=extension/module/omnivalt"/>{{ HTTPS_CATALOG }}index.php?route=extension/module/omnivalt</a><br />
-                    Nuoroda galima naudoti automatiniam omnivalt terminalų atnaujinimui naudojant local serverio crontab funkcijas. 
-                    Arba jei tokios nėra - https://cron-job.org/en/ ir panašius servisus.
                     </div>
           </div>
           <!-- Field for email templates -->
             <div class="form-group">
-                    <label class="col-sm-2 control-label" for="terminals">Email templates <Br />
-                    Enabled/Disabled 
+                    <label class="col-sm-2 control-label" for="terminals">{{ text_email_templates_head }} <Br />
+                    {{ text_enabled_disabled }}
                     <input 
                     {% if shipping_omnivalt_enable_templates == 'on' %}  'checked' {% endif %}
                     type="checkbox"
                     name="shipping_omnivalt_enable_templates">
-                    <Br />(Email will be sent then first label is generated.)
+                    <Br />{{ text_email_templates }}
                     </label>
                     <div class="col-sm-10" id="terminals">
                       <textarea 
