--- a/catalog/view/javascript/omniva.css
+++ b/catalog/view/javascript/omniva.css
@@ -54,11 +54,21 @@
   padding-right: 4px;
   color: black;
   height: 7%;
+  /* prefixed to work with IE10 and Android <4.4 */
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  align-items: center;
 }
 
 .omniva-modal-header h5 {
   padding: 0px;
   margin: 0px;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .omniva-modal-body {
@@ -150,9 +160,12 @@
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: center center;
+  outline: none;
+  border: 0;
   border-radius: 0 3px 3px 0;
   height: 36px;
   width: 30px;
+  margin-left: -30px;
   display: block;
   float: left;
   background-color: #ff6319;
@@ -487,9 +500,11 @@ ol li {
 }
 
 #omniva-search form input {
+  width: 100%;
   padding: 2px 10px;
+  padding-right: 40px;
   border: 1px solid #555;
-  border-radius: 3px 0 0 3px;
+  border-radius: 3px;
   line-height: 30px;
   height: 36px;
   display: block;
@@ -505,7 +520,7 @@ ol li {
   position: absolute;
   background: #fff;
   z-index: 9;
-  width: 300px;
+  /* width: 300px; */
   border: 1px solid #ccc;
   top: 30px;
   max-width: 100%;
@@ -514,6 +529,7 @@ ol li {
 .omniva-autocomplete ul {
   list-style: none;
   margin: 0;
+  padding: 0;
   width: 100%;
 }
 
