cleanup, fixes for php7.3, migration to omniva-map

--- a/catalog/view/javascript/omniva-map.css
+++ b/catalog/view/javascript/omniva-map.css
@@ -1,6 +1,11 @@
-/**Map */
+/**
+* Map
+**/
+.omniva-terminal-container *, .omniva-modal * {
+  box-sizing: border-box;
+}
 
-.modal {
+.omniva-modal {
   display: none;
   position: fixed;
   left: 0;
@@ -32,8 +37,8 @@
   animation-duration: 0.4s;
 }
 
-.close {
-  color: black;
+.omniva-modal-close {
+  color: #969696;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -42,7 +47,7 @@
   right: 20px;
 }
 
-.close:hover, .close:focus {
+.omniva-modal-close:hover, .omniva-modal-close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
@@ -65,6 +70,7 @@
 }
 
 .omniva-modal-header h5 {
+  display: inline;
   padding: 0px;
   margin: 0px;
   font-size: 18px;
@@ -121,42 +127,7 @@
   }
 }
 
-.btn-address {
-  background-color: #E47A2E;
-  color: white;
-  font-size: 15px;
-  font-weight: 500;
-  border: 1px solid black;
-  border-radius: 3px;
-  padding: 3px 7px;
-  margin: 2px;
-}
-
-.btn-address:hover {
-  background-color: #555555;
-  color: white;
-}
-
-.btn-address-gps {
-  background-color: #E94B3C;
-  color: white;
-  text-align: center;
-  padding: 3px 7px;
-  margin: 2px;
-  border: 1px solid black;
-  border-radius: 3px;
-  color: white;
-  font-size: 15px;
-  font-weight: 500;
-}
-
-.btn-address-gps:hover {
-  background-color: #555555;
-  color: white;
-}
-
-#map-search-button {
-  background-image: url("../../../image/omniva/search-w.png");
+.omniva-modal-search-btn {
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: center center;
@@ -171,18 +142,18 @@
   background-color: #ff6319;
 }
 
-.pac-container {
-  z-index: 10511 !important;
-}
-
 .omniva-li, .omniva-li a {
   font-size: 15px;
-  color: black !important;
+  color: black;
 }
 
 .omniva-li:hover {
   cursor: pointer;
-  color: #555 !important;
+  color: #555;
+}
+
+.omniva-li .omniva-details {
+  text-align: left;
 }
 
 .omniva-modal-content .omniva-terminals-listing {
@@ -195,33 +166,241 @@
   padding: 5px;
   border-radius: 4px;
   list-style-type: none;
-  width: 100% !important;
+  width: 100%;
 }
 
 .omniva-modal-content .omniva-terminals-listing li:nth-child(even) {
   background: #f2f2f2;
 }
 
-.omniva-search {
-  width: 98%;
-  padding: 2px 10px;
-  border: 1px solid #555;
-  border-radius: 3px;
-  line-height: 28px;
-}
-
-.btn-marker {
+.omniva-select-terminal-btn {
   background-color: white;
   color: black;
-  padding: 4px;
   border: 1px solid black;
   border-radius: 2px;
+  font-size:14px;
+  padding:0px 5px;
+  margin-bottom:10px;
+  margin-top:5px;
+  height:25px;
 }
 
-.btn-marker:hover {
+.omniva-select-terminal-btn:hover {
   background-color: #555555;
   color: white;
 }
+
+.omniva-map-container {
+  width: 59%;
+  height: 100%;
+  border: 1px solid black;
+  background-color: lightgray;
+  float: left;
+}
+
+.omniva-map {
+  width: 100%;
+  height: 100%;
+}
+
+.omniva-search-bar {
+  width: 40%;
+  min-height: 400px;
+  padding: 0px 10px;
+  float: left;
+  overflow: hidden;
+  padding-left: 26px;
+}
+
+.omniva-search-bar h4 {
+  margin-top: 0px;
+}
+
+/** Tooltips*/
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  opacity: 0.9;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 110%;
+  left: 50%;
+  margin-left: -100px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+/*
+ * Custom scrollbar 
+ **/
+
+.omniva-scrollbar {
+  overflow: auto;
+  display: inline-block;
+  vertical-align: top;
+  height: inherit;
+  width: 100%;
+  max-height: 50vh;
+  position: relative;
+  margin-top: 5px;
+}
+
+.omniva-scrollbar-style-8::-webkit-scrollbar-track {
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+}
+
+.omniva-scrollbar-style-8::-webkit-scrollbar {
+  width: 5px;
+  background-color: rgba(0, 0, 0, 0, 0.4);
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+}
+
+.omniva-scrollbar-style-8::-webkit-scrollbar-thumb {
+  border: 1px solid #000000;
+  border-radius: 5px;
+  background-color: #000000;
+}
+
+ol li {
+  list-style-type: decimal;
+  list-style-type: upper-roman;
+}
+
+.omniva-modal-content form {
+  margin-bottom: 10px;
+}
+
+.omniva-search {
+  position: relative;
+}
+
+.omniva-search form:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+.omniva-search form input {
+  width: 100%;
+  padding: 2px 10px;
+  padding-right: 40px;
+  border: 1px solid #555;
+  border-radius: 3px;
+  line-height: 30px;
+  height: 36px;
+  display: block;
+  float: left;
+  background-color: #ffffff;
+}
+
+.omniva-autocomplete {
+  position: absolute;
+  background: #fff;
+  z-index: 9;
+  border: 1px solid #ccc;
+  top: 30px;
+  max-width: 100%;
+}
+
+.omniva-autocomplete ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.omniva-autocomplete ul li {
+  cursor: pointer;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+  font-size: 14px;
+}
+
+.omniva-autocomplete ul li:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+.omniva-autocomplete ul li:hover {
+  background-color: #efefef;
+  ;
+}
+
+@keyframes bounce {
+  from {
+    top: 0px;
+  }
+  to {
+    top: -8px;
+  }
+}
+
+@-webkit-keyframes bounce {
+  from {
+    top: 0px;
+  }
+  to {
+    top: -8px;
+  }
+}
+
+.omniva-map img.active {
+  animation: bounce 0.7s infinite alternate;
+  -webkit-animation: bounce 0.7s infinite alternate;
+}
+
+.omniva-back-to-list {
+  cursor: pointer;
+  padding: 2px 10px;
+  width: auto;
+  display: inline-block;
+  font-size: 14px;
+  position: relative;
+  padding-left: 18px;
+}
+
+.omniva-back-to-list:before {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  top: 6px;
+  left: 0px;
+  /* background-image: url("../../../image/omniva/back.png"); */
+  background-size: contain;
+  position: absolute;
+}
+
+/**
+* Terminal container
+**/
 
 .omniva-btn {
   max-height: 30px;
@@ -251,12 +430,12 @@
   bottom: 0;
 }
 
-.terminal-container {
+.omniva-terminal-container {
   position: relative;
   max-width: 500px;
 }
 
-.loading-overlay {
+.omniva-loading-overlay {
   display: block;
   position: absolute;
   top: 0;
@@ -271,7 +450,7 @@
   cursor: default;
 }
 
-.loading-overlay:before {
+.omniva-loading-overlay:before {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
@@ -293,262 +472,6 @@
   color: #EE3840;
 }
 
-#omnivaMapContainer {
-  width: 59%;
-  height: 100%;
-  border: 1px solid black;
-  background-color: lightgray !important;
-  float: left;
-}
-
-#omnivaMap {
-  width: 100%;
-  height: 100%;
-}
-
-.omniva-search-bar {
-  width: 40%;
-  min-height: 400px;
-  padding: 0px 10px;
-  float: left;
-  overflow: hidden;
-  /*padding-top: 4px;
-    padding-right: 4px;*/
-  padding-left: 26px;
-}
-
-.esri-popup__header-title {
-  font: 15px arial, sans-serif !important;
-  margin: 0px !important;
-  padding: 0px !important;
-}
-
-.esri-popup__main-container {
-  padding: 30px !important;
-}
-
-/** Tooltips*/
-
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 200px;
-  background-color: black;
-  opacity: 0.9;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 110%;
-  left: 50%;
-  margin-left: -100px;
-}
-
-.tooltip .tooltiptext::afterr {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: black transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-}
-
-/*
- * Custom scrollbar 
- **/
-
-.scrollbar {
-  overflow: auto;
-  display: inline-block;
-  vertical-align: top;
-  height: inherit;
-  width: 100%;
-  max-height: 50vh;
-  position: relative;
-  margin-top: 5px;
-}
-
-#style-8::-webkit-scrollbar-track {
-  border: 1px solid rgba(0, 0, 0, 0.4);
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 5px;
-}
-
-#style-8::-webkit-scrollbar {
-  width: 5px;
-  background-color: rgba(0, 0, 0, 0, 0.4);
-  border: 1px solid rgba(0, 0, 0, 0.4);
-  border-radius: 5px;
-}
-
-#style-8::-webkit-scrollbar-thumb {
-  border: 1px solid #000000;
-  border-radius: 5px;
-  background-color: #000000;
-}
-
-/**
- * Media queries
- **/
-
-@media only screen and (max-width: 808px) {
-  #omnivaMapContainer {
-    width: 99%;
-    height: 30%;
-    border: 1px solid black;
-    background-color: lightgray !important;
-  }
-  .omniva-search-bar {
-    width: 99%;
-    margin-top: 5px;
-    padding: 0px 10px;
-    overflow: hidden;
-  }
-  select[name="omnivalt_parcel_terminal"] {
-    width: 70%;
-  }
-  .scrollbar {
-    overflow: auto;
-    display: inline-block;
-    vertical-align: top;
-    height: inherit;
-    max-height: 30vh;
-    position: relative;
-    width: 100%;
-    margin-top: 5px;
-  }
-  .esri-search__suggestions-menu {
-    height: 150px;
-  }
-}
-
-ol li {
-  list-style-type: decimal;
-  list-style-type: upper-roman;
-}
-
-.omniva-modal-content form {
-  margin-bottom: 10px;
-}
-
-@media only screen and (max-width: 768px) {
-  .omniva-modal-content {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  #omnivaMapContainer {
-    width: 100%;
-    height: 50%;
-  }
-  .omniva-modal-body {
-    padding: 0;
-  }
-  .found_terminals.scrollbar {
-    max-height: 30vh;
-  }
-  .terminal-container {
-    min-width: 170px;
-  }
-  #omniva-search input {
-    width: calc(100% - 50px);
-  }
-}
-
-@media screen and (min-width: 1500px) {
-  .omniva-modal-content {
-    z-index: 20;
-    position: fixed;
-    top: 10%;
-    left: 15%;
-    background-color: #fefefe;
-    border-radius: 5px;
-    width: 65%;
-    height: 60%;
-    -webkit-animation-name: slideIn;
-    -webkit-animation-duration: 0.4s;
-    animation-name: slideIn;
-    animation-duration: 0.4s;
-  }
-  .scrollbar {
-    max-height: 40vh;
-  }
-}
-
-#omniva-search {
-  position: relative;
-}
-
-#omniva-search form:after {
-  content: "";
-  clear: both;
-  display: block;
-}
-
-#omniva-search form input {
-  width: 100%;
-  padding: 2px 10px;
-  padding-right: 40px;
-  border: 1px solid #555;
-  border-radius: 3px;
-  line-height: 30px;
-  height: 36px;
-  display: block;
-  float: left;
-  background-color: #ffffff;
-}
-
-.esri-icon-zoom-in-magnifying-glass {
-  display: none;
-}
-
-.omniva-autocomplete {
-  position: absolute;
-  background: #fff;
-  z-index: 9;
-  /* width: 300px; */
-  border: 1px solid #ccc;
-  top: 30px;
-  max-width: 100%;
-}
-
-.omniva-autocomplete ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-.omniva-autocomplete ul li {
-  cursor: pointer;
-  padding: 5px;
-  border-bottom: 1px solid #ccc;
-  font-size: 14px;
-}
-
-.omniva-autocomplete ul li:nth-child(even) {
-  background-color: #f5f5f5;
-}
-
-.omniva-autocomplete ul li:hover {
-  background-color: #efefef;
-  ;
-}
-
 /* omniva terminal selection */
 
 .omniva-terminals-list {
@@ -557,7 +480,7 @@ ol li {
   max-width: 500px;
 }
 
-.omniva-terminals-list .inner-container {
+.omniva-terminals-list .omniva-inner-container {
   position: absolute;
   background: #fff;
   z-index: 100;
@@ -567,7 +490,7 @@ ol li {
   width: 100%;
 }
 
-.omniva-terminals-list .dropdown {
+.omniva-terminals-list .omniva-dropdown {
   border: 1px solid #aaa;
   border-radius: 4px;
   word-wrap: normal;
@@ -580,7 +503,7 @@ ol li {
   padding: 2px 20px 2px 5px;
 }
 
-.omniva-terminals-list.open .dropdown {
+.omniva-terminals-list.open .omniva-dropdown {
   border-bottom: none;
   border-radius: 4px 4px 0 0;
 }
@@ -595,7 +518,7 @@ ol li {
   background-color: #fff;
 }
 
-.omniva-terminals-list .dropdown:after {
+.omniva-terminals-list .omniva-dropdown:after {
   position: absolute;
   content: "";
   border-color: #888 transparent transparent transparent;
@@ -610,7 +533,7 @@ ol li {
   width: 0;
 }
 
-.omniva-terminals-list.open .dropdown:after {
+.omniva-terminals-list.open .omniva-dropdown:after {
   border-color: transparent transparent #888 transparent;
   border-width: 0px 4px 5px 4px;
 }
@@ -635,7 +558,7 @@ ol li {
   padding-left: 10px;
 }
 
-.omniva-terminals-list ul li.city {
+.omniva-terminals-list ul li.omniva-city {
   font-weight: 600;
   padding-left: 5px;
 }
@@ -653,79 +576,108 @@ ol li {
   color: #ffffff;
 }
 
-.omniva-terminals-list .search-input:focus, .omniva-terminals-list .search-input {
+.omniva-terminals-list .omniva-search-input:focus, .omniva-terminals-list .omniva-search-input {
   display: inline-block;
   padding: 2px 5px;
   width: 100%;
   border-bottom: 1px solid #ccc;
   margin-bottom: 4px;
-  background-color: #ff6319!important;
+  background-color: #ff6319;
   color: #ffffff;
 }
 
-.omniva-terminals-list .search-input::placeholder {
+.omniva-terminals-list .omniva-search-input::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: inherit;
   opacity: 1;
   /* Firefox */
 }
 
-.omniva-terminals-list .search-input:-ms-input-placeholder {
+.omniva-terminals-list .omniva-search-input:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: inherit;
 }
 
-.omniva-terminals-list .search-input::-ms-input-placeholder {
+.omniva-terminals-list .omniva-search-input::-ms-input-placeholder {
   /* Microsoft Edge */
   color: inherit;
 }
 
-.omniva-terminals-list .show-more {
+.omniva-terminals-list .omniva-show-more {
   padding: 5px;
   text-align: center;
 }
 
-@keyframes bounce {
-  from {
-    top: 0px;
+/**
+ * Media queries
+ **/
+ @media only screen and (max-width: 768px) {
+  .omniva-modal-content {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
-  to {
-    top: -8px;
+  .omniva-map-container {
+    width: 100%;
+    height: 50%;
+  }
+  .omniva-modal-body {
+    padding: 0;
+  }
+  .omniva-found-terminals.omniva-scrollbar {
+    max-height: 30vh;
+  }
+  .omniva-terminal-container {
+    min-width: 170px;
+  }
+  .omniva-search input {
+    width: calc(100% - 50px);
   }
 }
 
-@-webkit-keyframes bounce {
-  from {
-    top: 0px;
+ @media only screen and (max-width: 808px) {
+  .omniva-map-container {
+    width: 99%;
+    height: 30%;
+    border: 1px solid black;
+    background-color: lightgray;
   }
-  to {
-    top: -8px;
+  .omniva-search-bar {
+    width: 99%;
+    margin-top: 5px;
+    padding: 10px 10px 0px;
+    overflow: hidden;
+  }
+
+  .omniva-scrollbar {
+    overflow: auto;
+    display: inline-block;
+    vertical-align: top;
+    height: inherit;
+    max-height: 30vh;
+    /* position: relative; */
+    width: 100%;
+    margin-top: 5px;
   }
 }
 
-#omnivaMap img.active {
-  animation: bounce 0.7s infinite alternate;
-  -webkit-animation: bounce 0.7s infinite alternate;
-}
-
-.omniva-back-to-list {
-  cursor: pointer;
-  padding: 2px 10px;
-  width: auto;
-  display: inline-block;
-  font-size: 14px;
-  position: relative;
-  padding-left: 18px;
-}
-
-.omniva-back-to-list:before {
-  content: "";
-  display: block;
-  width: 14px;
-  height: 14px;
-  top: 6px;
-  left: 0px;
-  background-image: url("../../../image/omniva/back.png");
-  background-size: contain;
-  position: absolute;
+@media screen and (min-width: 1500px) {
+  .omniva-modal-content {
+    z-index: 20;
+    position: fixed;
+    top: 10%;
+    left: 15%;
+    background-color: #fefefe;
+    border-radius: 5px;
+    width: 65%;
+    height: 60%;
+    -webkit-animation-name: slideIn;
+    -webkit-animation-duration: 0.4s;
+    animation-name: slideIn;
+    animation-duration: 0.4s;
+  }
+  .omniva-scrollbar {
+    max-height: 40vh;
+  }
 }
